--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ html {
 body {
   font-family: "Anek Latin", sans-serif;
   background-color: #18181b;
+  color: #fff;
+  background-image: url("./assets/images/bg.svg");
+  background-size: 15%;
 }
 
 h1 {
